[package]
name = "rustyrogue"
version = "0.1.0"
authors = ["Jonathan Brodsky <jonbro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rltk="0.8.1"
specs = { version = "0.16.1" }
specs-derive = "0.4.1"
nalgebra = "0.21.1"
wasm-bindgen = "0.2.45"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

